# Django-API

mysite/: build.sh  pyproject.toml  testagem.ipynb
mysite/accounts/: urls.py  views.py
mysite/accounts/templates/accounts/: login.html
mysite/contacts/: forms.py  models.py  urls.py  views.py
mysite/contacts/templates/contacts/: create.html
mysite/mysite/: admin.py  settings.py  urls.py
mysite/polls/: admin.py  models.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_question_active.py
mysite/polls/templates/polls/: index.html  results.html
mysite/templates/admin/: base.html
mysite/tests/contacts/: test_form.py  test_views.py
mysite/tests/polls/: test_models.py
